fix: make additional info nowrap

--- a/app/components/ui/cards/movie-small-card/MovieSmallCard.module.scss
+++ b/app/components/ui/cards/movie-small-card/MovieSmallCard.module.scss
@@ -31,11 +31,10 @@
 			text-overflow: ellipsis;
 			white-space: nowrap;
 			overflow: hidden;
-			width: 65%;
 		}
 
 		&-additional-info {
-			@apply text-sm flex flex-row gap-3 font-light text-gray-500;
+			@apply text-sm flex flex-row gap-3 font-light text-gray-500 whitespace-nowrap;
 		}
 	}
 }
